{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 73,
  "lineage": "7c783f87-9684-7f30-b90f-c15106222c55",
  "resources": [
    {
      "module": "module.test_env_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_env_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095a8f574cb0ac0d0",
            "arn": "arn:aws:ec2:us-east-1:905418438096:instance/i-0fb773a4e118f21c1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb773a4e118f21c1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ba3057ffadd9818d",
            "private_dns": "ip-10-0-46-21.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.46.21",
            "public_dns": "ec2-18-233-8-231.compute-1.amazonaws.com",
            "public_ip": "18.233.8.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ca945d414c333b62",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0539df5d27f58f41d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09635e6dadbe37e0a",
            "tags": {
              "Name": "main_server"
            },
            "tags_all": {
              "Name": "main_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0539df5d27f58f41d"
            ]
          },
          "dependencies": [
            "module.test_env_module.aws_security_group.security",
            "module.test_env_module.aws_subnet.subnet",
            "module.test_env_module.aws_vpc.test_env",
            "module.test_env_module.data.aws_ami.ubuntu_ami"
          ]
        }
      ]
    },
    {
      "module": "module.test_env_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_env_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418438096:internet-gateway/igw-0766f01ce2269593a",
            "id": "igw-0766f01ce2269593a",
            "owner_id": "905418438096",
            "vpc_id": "vpc-0b8b35ad3f0460ecd"
          },
          "dependencies": [
            "module.test_env_module.aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "module": "module.test_env_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_test_env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418438096:route-table/rtb-0e37ab4e5cb139ff7",
            "id": "rtb-0e37ab4e5cb139ff7",
            "owner_id": "905418438096",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0766f01ce2269593a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b8b35ad3f0460ecd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_env_module.aws_internet_gateway.test_env_gw",
            "module.test_env_module.aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "module": "module.test_env_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088fe49ded94c46eb",
            "route_table_id": "rtb-0e37ab4e5cb139ff7",
            "subnet_id": "subnet-09635e6dadbe37e0a"
          },
          "dependencies": [
            "module.test_env_module.aws_internet_gateway.test_env_gw",
            "module.test_env_module.aws_route_table.route_table_test_env",
            "module.test_env_module.aws_subnet.subnet",
            "module.test_env_module.aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "module": "module.test_env_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418438096:security-group/sg-0539df5d27f58f41d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0539df5d27f58f41d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 81
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all",
            "name_prefix": "",
            "owner_id": "905418438096",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b8b35ad3f0460ecd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_env_module.aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "module": "module.test_env_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418438096:subnet/subnet-09635e6dadbe37e0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09635e6dadbe37e0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418438096",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b8b35ad3f0460ecd"
          },
          "dependencies": [
            "module.test_env_module.aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "module": "module.test_env_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418438096:vpc/vpc-0b8b35ad3f0460ecd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02acb8ed8222fb69d",
            "default_route_table_id": "rtb-0d25b1854eec93ec2",
            "default_security_group_id": "sg-0ac759c1bebb06f31",
            "dhcp_options_id": "dopt-051bc3b7b2d2b0ad3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8b35ad3f0460ecd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d25b1854eec93ec2",
            "owner_id": "905418438096",
            "tags": {
              "Name": "test_env"
            },
            "tags_all": {
              "Name": "test_env"
            }
          }
        }
      ]
    }
  ]
}